fix marginal overlap rendering issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,13 +46,13 @@ a:hover .inline-link-header {
     content: "";
     background-color: #082745;
     width: 100%;
-    height: 100%;
+    height: 50%;
     position: absolute;
     left: 0;
-    top: .25em;
+    bottom: -.25em;
     border-radius: 0.4rem;
     z-index: -1;
-    transition: top 50ms linear;
+    transition: bottom 50ms linear;
 }
 
 .block-link:hover span {
@@ -60,5 +60,5 @@ a:hover .inline-link-header {
 }
 
 .block-link:hover span::after {
-    top: 0;
+    bottom: 0;
 }
